Pesbuk/Secret/secret-pesbuk-ingress.yml
apiVersion: v1
kind: Namespace
metadata:
  name: pesbuk-ns

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx
  namespace: pesbuk-ns
spec:
  replicas: 2
  selector:
    matchLabels:
      name: nginx
  template:
    metadata:
      labels:
        name: nginx
    spec:
      containers:
      - name: nginx
        image: raxer/pesbuk2
---
apiVersion: v1
kind: Service
metadata:
  name: nginx
  namespace: pesbuk-ns
spec:
  #type: LoadBalancer
  ports:
    - port: 80
      #nodePort: 30080
  selector:
    name: nginx
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: nginx-ingress
  namespace: pesbuk-ns
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: pesbuk.rafifauz.site
    http:
      paths:
      #- path: /belajar
      - backend:
          serviceName: nginx
          servicePort: 80
